--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -18,14 +18,15 @@ jobs:
         go-version: 1.17.x
     - name: Build
       run: go run build/ci.go install ./cmd/gubiq
+      run: mv build/bin/gubiq build/bin/gubiq-linux-amd64
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
         name: gubiq-linux-amd64
-        path: build/bin/gubiq
+        path: build/bin/gubiq-linux-amd64
 
   build-mac:
-    runs-on: macos-latest
+    runs-on: macos-11
     steps:
     - name: Check out ubiq/go-ubiq
       uses: actions/checkout@v2
@@ -38,8 +39,9 @@ jobs:
         go-version: 1.17.x
     - name: Build
       run: go run build/ci.go install ./cmd/gubiq
+      run: mv build/bin/gubiq build/bin/gubiq-darwin-amd64
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
         name: gubiq-darwin-amd64
-        path: build/bin/gubiq
+        path: build/bin/gubiq-darwin-amd64
