--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -17,8 +17,9 @@ jobs:
       with:
         go-version: 1.17.x
     - name: Build
-      run: go run build/ci.go install ./cmd/gubiq
-      run: mv build/bin/gubiq build/bin/gubiq-linux-amd64
+      run: |
+        go run build/ci.go install ./cmd/gubiq
+        mv build/bin/gubiq build/bin/gubiq-linux-amd64
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
@@ -38,8 +39,9 @@ jobs:
       with:
         go-version: 1.17.x
     - name: Build
-      run: go run build/ci.go install ./cmd/gubiq
-      run: mv build/bin/gubiq build/bin/gubiq-darwin-amd64
+      run: |
+        go run build/ci.go install ./cmd/gubiq
+        mv build/bin/gubiq build/bin/gubiq-darwin-amd64
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
       with:
