--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -34,6 +34,10 @@ jobs:
       with:
         repository: ubiq/go-ubiq
         ref: v5.2.0
+    - name: Install Go
+      uses: actions/setup-go@v2
+      with:
+        go-version: 1.16.x
     - name: Build
       run: |
         go run build/ci.go install ./cmd/gubiq
