--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -1,5 +1,8 @@
 name: Go-Ubiq GitHub Actions Release Builder
 
+env:
+  BUILD_TAG: v5.2.0
+  GO_VERSION: 1.17.x
 on:
   push:
 
@@ -11,11 +14,11 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: ubiq/go-ubiq
-        ref: v5.2.0
+        ref: ${{ env.BUILD_TAG }}
     - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.17.x
+        go-version: ${{ env.GO_VERSION }}
     - name: Build
       run: |
         go run build/ci.go install ./cmd/gubiq
@@ -33,11 +36,11 @@ jobs:
       uses: actions/checkout@v2
       with:
         repository: ubiq/go-ubiq
-        ref: v5.2.0
+        ref: ${{ env.BUILD_TAG }}
     - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.17.x
+        go-version: ${{ env.GO_VERSION }}
     - name: Build
       run: |
         go get golang.org/x/sys
