--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -19,7 +19,7 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: ${{ env.GO_VERSION }}
-    - name: Build
+    - name: Build AMD64
       run: |
         go run build/ci.go install ./cmd/gubiq
         mv build/bin/gubiq build/bin/gubiq-linux-amd64
@@ -28,6 +28,30 @@ jobs:
       with:
         name: gubiq-linux-amd64
         path: build/bin/gubiq-linux-amd64
+    - name: Install ARM dependencies
+      # ARM dependencies
+      # Switch over GCC to cross compilation (breaks 386, hence why do it here only)
+      run: |
+        sudo -E apt-get -yq --no-install-suggests --no-install-recommends --force-yes install gcc-arm-linux-gnueabi libc6-dev-armel-cross gcc-arm-linux-gnueabihf libc6-dev-armhf-cross gcc-aarch64-linux-gnu libc6-dev-arm64-cross
+        sudo ln -s /usr/include/asm-generic /usr/include/asm
+    - name: Build ARM 7
+      run: |
+        GOARM=7 go run build/ci.go install -arch arm -cc arm-linux-gnueabihf-gcc ./cmd/gubiq
+        mv -v build/bin/gubiq build/bin/gubiq-linux-arm7
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: gubiq-linux-arm7
+        path: build/bin/gubiq-linux-arm7
+    - name: Build ARM AMD64
+      run: |
+        go run build/ci.go install -arch arm64 -cc aarch64-linux-gnu-gcc ./cmd/gubiq
+        mv -v build/bin/gubiq build/bin/gubiq-linux-arm64
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: gubiq-linux-arm64
+        path: build/bin/gubiq-linux-arm64
 
   build-mac:
     runs-on: macOS-10.15
