--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -91,7 +91,7 @@ jobs:
       uses: msys2/setup-msys2@v2
       with:
         msystem: mingw64
-        install: mingw-w64-x86_64-toolchain
+        install: mingw-w64-x86_64-gcc
     - name: Build
       run: |
         go run build\ci.go install -cc C:\msys64\mingw64\bin\gcc.exe ./cmd/gubiq
