--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -95,8 +95,8 @@ jobs:
     - name: Build
       run: |
         $Env:MSYS2_ROOT = msys2 -c 'cygpath -m /'
-        $Env:PATH += ";$Env:MSYS2_ROOT"
-        go run build\ci.go install -cc $Env:MSYS2_ROOT/mingw64/bin/gcc.exe ./cmd/gubiq
+        $Env:PATH += ";$Env:MSYS2_ROOT/mingw64/bin"
+        go run build/ci.go install -arch amd64 -cc $Env:MSYS2_ROOT/mingw64/bin/gcc.exe ./cmd/gubiq
         mv build/bin/gubiq.exe build/bin/gubiq-windows-amd64.exe
     - name: Upload Artifact
       uses: actions/upload-artifact@v2
